src/app/shared/components/action-toolbar/action-toolbar.component.scss
.action-toolbar {
  display: flex;
  align-items: center;
  justify-content: space-between;
  background-color: var(--color-bg-base);
  padding: 0 10px;
  min-height: 55px;

  .toolbar-left,
  .toolbar-center,
  .toolbar-right {
    display: flex;
    align-items: center;
    gap: 20px;
    flex: 1;
  }

  .toolbar-left {
    min-width: 0;
  }

  .toolbar-center {
    justify-content: center;
    white-space: nowrap;
    //overflow: hidden;
    text-overflow: ellipsis;
    max-width: 100%;
  }

  .toolbar-right {
    justify-content: flex-end;
    margin-left: auto;
  }
}

